# template-backend

./: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
alembic/: env.py
rps_backend/: api.py  constants.py  main.py  schemas.py
rps_backend/auth/: models.py
rps_backend/health/: router.py  schemas.py
scripts/: mypy.sh  ruff.sh  start.sh
template_backend/: api.py  config.py  main.py
template_backend/auth/: models.py
template_backend/database/: config.py  dependencies.py  models.py  service.py
template_backend/health/: router.py  schemas.py
tests/: conftest.py
tests/health/: test_health_check.py
